[tool.poetry]
name = "sumeyyes-amazing-word-game"
version = "0.1.0"
description = "A word guessing game for my class teacher Sumeyye!"
authors = ["rootrim <omuaz01@gmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
