[tool.poetry]
name = "sumeyyes-amazing-word-game"
version = "1.0.0"
description = "A word guessing game for my class teacher Sumeyye!"
authors = ["rootrim <omuaz01@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
